<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <UIControl.CustomTextViewRegular
        android:id="@+id/free_trial_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/msg_free_trial_1_1_1"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/free_trial_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background_rounded_rectangle"
        android:minWidth="250dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:textSize="18sp">

        <UIControl.CustomTextViewRegular
            android:id="@+id/got_it_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/got_it"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <UIControl.CustomTextViewRegular
            android:id="@+id/txtThreeDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/got_it_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/text_below_got_it"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <UIControl.CustomTextViewRegular
        android:id="@+id/help_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/submit_btn"
        android:layout_alignStart="@id/submit_btn"
        android:layout_below="@id/submit_btn"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/msg_free_trial_help"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>